Updated models for orders and cart
